# werr

./: README.md  mkdocs.yml  pyproject.toml
docs/: index.md  no_nav_title.css
examples/sleeps/: pyproject.toml
plscheck/: check.py  cli.py  cmd.py  config.py  main.py  report.py
tests/: __init__.py  conftest.py  test_cmd.py  test_config.py  test_needs.py  test_report.py  test_task.py
werrlib/: cli.py  cmd.py  config.py  main.py  report.py  task.py
