[project]
name = "werr"
version = "0.1.0"
description = "A python project task runner"
readme = "README.md"
requires-python = ">=3.13"
scripts = { "werr" = "werrlib.main:console_entry" }

dependencies = [
    "rich-argparse>=1.7.2",
]

[tool.uv]
package = true

[tool.werr]
tasks.check = [
    "mypy {project}",
    "black --check {project}",
    "isort --check {project}",
    "ruff check {project}",
]
tasks.fix = [
    "black {project}",
    "isort {project}",
    "ruff check --fix {project}",
]

[dependency-groups]
dev = [
    "ruff>=0.14.10",
]
