[project]
name = "werr"
version = "0.1.0"
description = "A python project task runner"
readme = "README.md"
requires-python = ">=3.13"
scripts = { "werr" = "werrlib.main:console_entry" }

dependencies = [
    "rich-argparse>=1.7.2",
]

[tool.uv]
package = true

[tool.werr]
tasks = [
    "mypy .",
    "black --check .",
    "isort --check .",
    "ruff check .",
]

[dependency-groups]
dev = [
    "ruff>=0.14.10",
]
